code cleanup
Improvements include:
- GridView scrolling
- App icon viewer performance
- DirViewer, Window, WindowManager code cleanups
- use of StreamEx lib
- various utility methods